tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"fun func(a: Num, b, c: Bool): Num {}\").unwrap()"
---
FunctionDefinition(
    "func",
    [
        Typed(
            "a",
            Type(
                "Num",
            ),
        ),
        Generic(
            "b",
        ),
        Typed(
            "c",
            Type(
                "Bool",
            ),
        ),
    ],
    Some(
        Type(
            "Num",
        ),
    ),
    [],
)
