tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"\n        fun func(a: Num, b: Text, c: Bool): Num {\n            echo 10\n\n            return 10\n        }\n    \").unwrap()"
---
FunctionDefinition(
    "func",
    [
        Typed(
            "a",
            Type(
                "Num",
            ),
        ),
        Typed(
            "b",
            Type(
                "Text",
            ),
        ),
        Typed(
            "c",
            Type(
                "Bool",
            ),
        ),
    ],
    Some(
        Type(
            "Num",
        ),
    ),
    [
        Echo(
            Number(
                10.0,
            ),
        ),
        Return(
            Some(
                Number(
                    10.0,
                ),
            ),
        ),
    ],
)
