tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-7.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"fun foo {\n        echo 10\n    }\")"
---
(
    Some(
        [
            (
                FunctionDefinition(
                    (
                        "foo",
                        4..7,
                    ),
                    [],
                    None,
                    [
                        (
                            Echo(
                                (
                                    Number(
                                        (
                                            10.0,
                                            23..25,
                                        ),
                                    ),
                                    23..25,
                                ),
                            ),
                            18..25,
                        ),
                    ],
                ),
                0..31,
            ),
        ],
    ),
    [
        Simple {
            span: 8..9,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "(",
                    ),
                ),
            },
            found: Some(
                Token(
                    "{",
                ),
            ),
            label: None,
        },
    ],
)
