tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-8.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"fun foo(abc! {\n        echo 10\n    }\")"
---
(
    Some(
        [
            (
                FunctionDefinition(
                    (
                        "foo",
                        4..7,
                    ),
                    [
                        (
                            Generic(
                                (
                                    "abc",
                                    8..11,
                                ),
                            ),
                            8..11,
                        ),
                        (
                            Error,
                            11..12,
                        ),
                    ],
                    None,
                    [
                        (
                            Echo(
                                (
                                    Number(
                                        (
                                            10.0,
                                            28..30,
                                        ),
                                    ),
                                    28..30,
                                ),
                            ),
                            23..30,
                        ),
                    ],
                ),
                0..36,
            ),
        ],
    ),
    [
        Simple {
            span: 11..12,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        ",",
                    ),
                ),
            },
            found: Some(
                Token(
                    "!",
                ),
            ),
            label: None,
        },
        Simple {
            span: 11..12,
            reason: Custom(
                "identifier must start with a letter or an underscore",
            ),
            expected: {},
            found: None,
            label: None,
        },
        Simple {
            span: 13..14,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        ")",
                    ),
                ),
            },
            found: Some(
                Token(
                    "{",
                ),
            ),
            label: None,
        },
    ],
)
