tests/grammar/snapshots/r#mod__grammar__alpha034__function_def.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(\"fun func() {}\")"
---
[
    (
        FunctionDefinition(
            (
                false,
                0..3,
            ),
            (
                "fun",
                0..3,
            ),
            (
                "func",
                4..8,
            ),
            [],
            None,
            [],
        ),
        0..13,
    ),
]
