tests/grammar/snapshots/r#mod__grammar__alpha034__function_invocation-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"func(1)\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        FunctionInvocation(
                            (
                                "func",
                                0..4,
                            ),
                            [
                                (
                                    Number(
                                        (
                                            1.0,
                                            5..6,
                                        ),
                                    ),
                                    5..6,
                                ),
                            ],
                            None,
                        ),
                        0..7,
                    ),
                ),
                0..7,
            ),
        ],
    ),
    0..7,
)
