tests/grammar/snapshots/r#mod__grammar__alpha034__function_invocation-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"func(1, 2)\").unwrap()"
---
Statement(
    [
        Expression(
            FunctionInvocation(
                "func",
                [
                    Number(
                        1.0,
                    ),
                    Number(
                        2.0,
                    ),
                ],
                None,
            ),
        ),
    ],
)
