tests/grammar/snapshots/r#mod__grammar__alpha034__function_invocation-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"func(\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                FunctionInvocation(
                                    (
                                        "func",
                                        0..4,
                                    ),
                                    [],
                                    None,
                                ),
                                0..5,
                            ),
                        ),
                        0..5,
                    ),
                ),
                0..5,
            ),
        ],
    ),
    [
        found end of input at 5..5 expected "expression", or '")"',
    ],
)
