tests/grammar/snapshots/r#mod__grammar__alpha034__function_invocation-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"func(1\")"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                FunctionInvocation(
                                    (
                                        "func",
                                        0..4,
                                    ),
                                    [
                                        (
                                            Number(
                                                (
                                                    1.0,
                                                    5..6,
                                                ),
                                            ),
                                            5..6,
                                        ),
                                    ],
                                    None,
                                ),
                                0..6,
                            ),
                        ),
                        0..6,
                    ),
                ),
                0..6,
            ),
        ],
    ),
    [
        Simple {
            span: 6..7,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        ")",
                    ),
                ),
            },
            found: None,
            label: None,
        },
    ],
)
